Setup with mrs-developer

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,6 +1,9 @@
 {
     "compilerOptions": {
         "paths": {
+            "volto-testaddon": [
+                "addons/volto-testaddon/src"
+            ]
         },
         "baseUrl": "src"
     }
