--- a/package.json
+++ b/package.json
@@ -3,7 +3,17 @@
   "description": "Volto Starter Kit",
   "license": "MIT",
   "version": "4.0.0",
+  "private": true,
+  "workspaces": [
+    "src/addons/volto-testaddon"
+  ],
+  "addons": [
+    "volto-testaddon"
+  ],
   "scripts": {
+    "develop:npx": "npx -p mrs-developer missdev --config=jsconfig.json --output=addons",
+    "develop": "missdev --config=jsconfig.json --output=addons",
+    "preinstall": "if [ -f $(pwd)/node_modules/.bin/missdev ]; then yarn develop; else yarn develop:npx; fi",
     "start": "razzle start",
     "postinstall": "yarn omelette",
     "omelette": "ln -sf node_modules/@plone/volto/ omelette",
@@ -83,7 +93,8 @@
     "node": "^10 || ^12"
   },
   "dependencies": {
-    "@plone/volto": "5.3.0"
+    "@plone/volto": "plone/volto#master",
+    "mrs-developer": "1.1.6"
   },
   "devDependencies": {
     "eslint-plugin-prettier": "3.1.2",
